2014-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Interactivity/email.pm: Check permission of the
	  check-file.

2014-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Interactivity/email.pm: Do not call remove if
	  resend_delay is 0.

2014-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck-device.pl: Fix output from tape scan.

2014-04-17  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (read_done): Call done_cb withthe error.
	* amar-src/amar.c (amar_read_cb): Call read_done on error.
	* amar-src/amar.h (amar_done_callback_t): Add error in prototype.
	* perl/Amanda/Archive.swg: (read_done_cb): Get error.

2014-04-16  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_read_cb): Call amar_stop_read.
	* amar-src/amar.c (set_amar_read_cb): Call amar_start_read.

2014-04-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix compiler warning.
	* config/amanda/syshacks.m4: Compile on s390x-8-linux-*

2014-04-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tapelist.swg: Fix perl warning.

2014-04-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix.
	* perl/Amanda/Interactivity/email.pm: Try to fix memory leak.
	* perl/Amanda/ScanInventory.pm: Abort the scan on inventory error.

2014-04-10  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Do not use newer glib function.

2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Taper_Scribe.pl (set_write_timestamp): Add method.
	* perl/Amanda/Taper/Scan.pm: Fix perl warning.

2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Tapelist.swg (lookup_by_barcode): New method to return a
	  tle from a barcode.

2014-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (_get_state): Lookupo label in tapelist
	  file if it is not availbale in bc2lb.
